# webrtc74later_apm

./: AUTHORS  Makefile.am  README.md  autogen.sh  build_arm64.sh  build_linux_x86_64.sh  configure.ac  webrtc-apm-wrapper.pc.in
webrtc/: Makefile.am
webrtc/api/: Makefile.am
webrtc/api/audio/: Makefile.am
webrtc/api/units/: Makefile.am
webrtc/base/: Makefile.am
webrtc/common_audio/: Makefile.am
webrtc/modules/: Makefile.am
webrtc/modules/audio_coding/: Makefile.am
webrtc/modules/audio_processing/: Makefile.am
webrtc/modules/audio_processing/echo_detector/: mean_variance_estimator.cc  normalized_covariance_estimator.cc
webrtc/modules/video_coding/: Makefile
webrtc/rtc_base/: Makefile.am
webrtc/system_wrappers/: Makefile.am
wrapper/: Makefile.am  build_test.sh  webrtc_apm_test.c  webrtc_apm_wrapper.cc  webrtc_apm_wrapper.h
