SUBDIRS = webrtc wrapper

pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = webrtc-audio-processing.pc  

webrtcincludedir = $(includedir)/webrtc_audio_processing
nobase_webrtcinclude_HEADERS = webrtc/api/video/video_rotation.h \
			       webrtc/api/video/video_content_type.h \
			       webrtc/rtc_base/arraysize.h \
			       webrtc/api/array_view.h \
			       webrtc/rtc_base/checks.h \
			       webrtc/rtc_base/constructor_magic.h \
			       webrtc/rtc_base/platform_file.h \
                   webrtc/rtc_base/numerics/safe_compare.h \
		           webrtc/rtc_base/sanitizer.h \
			       webrtc/rtc_base/type_traits.h \
			       webrtc/common_types.h \
			       webrtc/modules/audio_processing/include/audio_processing.h \
			       webrtc/modules/audio_processing/include/config.h \
			       webrtc/modules/include/module_common_types.h 

