noinst_LTLIBRARIES = libbase.la

noinst_HEADERS = threading/thread_checker.h    threading/thread_checker_impl.h base_export.h compiler_specific.h sequence_token.h  macros.h synchronization/lock.h

libbase_la_SOURCES = threading/thread_checker.h # threading/thread_checker_impl.cc  threading/thread_checker_impl.h synchronization/lock.h synchronization/lock.cc 

libbase_la_CXXFLAGS = $(AM_CXXFLAGS) $(COMMON_CXXFLAGS)

