noinst_LTLIBRARIES = libaudio_api.la

noinst_HEADERS = audio_frame.h \
echo_canceller3_config.h \
echo_canceller3_config_json.h \
echo_canceller3_factory.h \
echo_control.h 



libaudio_api_la_SOURCES = audio_frame.cc \
audio_frame.h \
echo_canceller3_config.cc \
echo_canceller3_config.h \
echo_canceller3_factory.cc \
echo_canceller3_factory.h \
echo_control.h


libaudio_api_la_CXXFLAGS = $(AM_CXXFLAGS) $(COMMON_CXXFLAGS)

