noinst_LTLIBRARIES = libunits.la

noinst_HEADERS = data_rate.h \
data_size.h \
frequency.h \
time_delta.h \
timestamp.h




libunits_la_SOURCES =   data_rate.cc \
		      	data_size.cc \
		       	frequency.cc \
		       	time_delta.cc \
		       	timestamp.cc


libunits_la_CXXFLAGS = $(AM_CXXFLAGS) $(COMMON_CXXFLAGS)

